fix hero text on small screen
Not showing on actual phone

--- a/app/assets/stylesheets/_hero.scss
+++ b/app/assets/stylesheets/_hero.scss
@@ -30,7 +30,7 @@
   font-size: 2rem; // TODO: responsive, fluid
   font-weight: bold;
   grid-area: 1/1;
-  margin-top: 3em;
+  margin-top: 2em;
   padding-right: 9vw;
   padding-left: 10vw;
 }
